--- a/mobile/views/homeView.html
+++ b/mobile/views/homeView.html
@@ -1,8 +1,229 @@
 <ul class="state clear">
-	<li class="start" ng-click='tab(0)' ng-class='{true:"active",false:""}[st==0]'>未完成</li>
-	<li ng-click='tab(1)' ng-class='{true:"active",false:""}[st==1]'>已完成</li>
+    <li class="start" ng-click='tab(0)' ng-class='{true:"active",false:""}[st==0]'>未完成</li>
+    <li ng-click='tab(1)' ng-class='{true:"active",false:""}[st==1]'>已完成</li>
 </ul>
-<ul class="homecontent">
-	<li ng-show='st==0' >未完成的作业列表</li>
-	<li ng-show='st==1' >已完成的作业列表</li>
+<ul class="table-content">
+    <li ng-show='st==0'>
+        <h4>第一章测试</h4>
+        <div class="questions">
+            <h5>单选题</h5>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="radio" name="an1">孙悟空
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">佛祖
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">龙马
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">金角大王
+                </label>
+            </div>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="radio" name="an1">孙悟空
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">佛祖
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">龙马
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">金角大王
+                </label>
+            </div>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="radio" name="an1">孙悟空
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">佛祖
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">龙马
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">金角大王
+                </label>
+            </div>
+        </div>
+        <div class="questions">
+            <h5>多选题</h5>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="checkbox">孙悟空
+                </label>
+                <label for="">
+                    <input type="checkbox">佛祖
+                </label>
+                <label for="">
+                    <input type="checkbox">龙马
+                </label>
+                <label for="">
+                    <input type="checkbox">金角大王
+                </label>
+            </div>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="checkbox">孙悟空
+                </label>
+                <label for="">
+                    <input type="checkbox">佛祖
+                </label>
+                <label for="">
+                    <input type="checkbox">龙马
+                </label>
+                <label for="">
+                    <input type="checkbox">金角大王
+                </label>
+            </div>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="checkbox">孙悟空
+                </label>
+                <label for="">
+                    <input type="checkbox">佛祖
+                </label>
+                <label for="">
+                    <input type="checkbox">龙马
+                </label>
+                <label for="">
+                    <input type="checkbox">金角大王
+                </label>
+            </div>
+        </div>
+        <div class="questions text">
+            <h5>填空题</h5>
+            <div>
+            	<label>1:那些同学追随过唐僧:<input type="text" name="" value=""></label>
+            </div>
+            <div>
+            	<label>1:哪些同学追随过唐僧:<input type="text" name="" value=""></label>
+            </div>
+            <div>
+            	<label>1:哪些同学追随过唐僧:<input type="text" name="" value=""></label>
+            </div>
+        </div>
+    </li>
+    <li ng-show='st==1'>
+        <h4>第二章测试</h4>
+        <div class="questions">
+            <h5>单选题</h5>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="radio" name="an1" checked>孙悟空
+                </label>
+                <label for="">
+                    <input type="radio" name="an1" >佛祖
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">龙马
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">金角大王
+                </label>
+            </div>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="radio" name="an1" checked>孙悟空
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">佛祖
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">龙马
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">金角大王
+                </label>
+            </div>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="radio" name="an1" checked>孙悟空
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">佛祖
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">龙马
+                </label>
+                <label for="">
+                    <input type="radio" name="an1">金角大王
+                </label>
+            </div>
+        </div>
+        <div class="questions">
+            <h5>多选题</h5>
+            <div>
+                <p>1:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="checkbox" checked>孙悟空
+                </label>
+                <label for="">
+                    <input type="checkbox">佛祖
+                </label>
+                <label for="">
+                    <input type="checkbox" checked>龙马
+                </label>
+                <label for="">
+                    <input type="checkbox">金角大王
+                </label>
+            </div>
+            <div>
+                <p>2:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="checkbox" checked>孙悟空
+                </label>
+                <label for="">
+                    <input type="checkbox">佛祖
+                </label>
+                <label for="">
+                    <input type="checkbox" checked>龙马
+                </label>
+                <label for="">
+                    <input type="checkbox">金角大王
+                </label>
+            </div>
+            <div>
+                <p>3:以下哪些同学追随过唐僧</p>
+                <label for="">
+                    <input type="checkbox" checked>孙悟空
+                </label>
+                <label for="">
+                    <input type="checkbox">佛祖
+                </label>
+                <label for="">
+                    <input type="checkbox" checked>龙马
+                </label>
+                <label for="">
+                    <input type="checkbox">金角大王
+                </label>
+            </div>
+           
+        </div>
+        <div class="questions text">
+            <h5>填空题</h5>
+            <div>
+                <label>1:那些同学追随过唐僧:<input type="text" name="" value=""></label>
+            </div>
+            <div>
+                <label>1:哪些同学追随过唐僧:<input type="text" name="" value=""></label>
+            </div>
+            <div>
+                <label>1:哪些同学追随过唐僧:<input type="text" name="" value=""></label>
+            </div>
+        </div>
+    </li>
 </ul>
