--- a/mobile/less/global.less
+++ b/mobile/less/global.less
@@ -23,7 +23,7 @@ li{
 	content: '';
 }
 body{
-	padding: 0.312rem;
+	// padding: 0.312rem;
 	position: relative;
 	footer {
         position: fixed;
