--- a/mobile/studentLess/homeView.less
+++ b/mobile/studentLess/homeView.less
@@ -35,13 +35,18 @@
 					border-radius: 0;
 					width: auto;
 				}
+				label{
+					padding: 0.094rem 0.0rem;
+					font-size: 0.5rem;
+					line-height: 0.812rem;
+				}
 			}
 			padding-bottom:0.312rem;
 			// 第几大题
 			h5{
 				font-size: 0.625rem;
 			}
-			div{
+			form{
 				padding: 0.156rem 0.0rem;
 				// 第几小题
 				p{
