--- a/mobile/studentLess/tip.less
+++ b/mobile/studentLess/tip.less
@@ -21,8 +21,10 @@
     .ann_content {
         // text-align: center;
         // padding: 0.625rem 0.625rem 0.0rem;
+        height: 12.0rem;
         margin-top: 0.625rem;
         li {
+            line-height: 0.688rem;
             a {
                 float: left;
                 line-height: 0.75rem;
@@ -34,6 +36,15 @@
             	line-height: 0.75rem;
                 font-size: 0.625rem;
             }
+        }
+    }
+    .pageList{
+        padding-top: 0.312rem;
+        margin: 0.0rem auto;
+        li{
+            float: left;
+            padding: 0.0rem 0.094rem;
+            font-size: 0.5rem;
         }
     }
 }
