--- a/mobile/teacherLess/tip.less
+++ b/mobile/teacherLess/tip.less
@@ -40,4 +40,10 @@
             }
         }
     }
+    .pageList{
+        li{
+            float: left;
+            padding: 0.0rem 0.156rem;
+        }
+    }
 }
