--- a/mobile/studentLess/tip.less
+++ b/mobile/studentLess/tip.less
@@ -1,5 +1,5 @@
 #ann {
-	padding: 1rem;
+	padding: 0.8rem;
 	text-align: center;
     .ann_title {
     	width: 75%;
@@ -25,13 +25,22 @@
         margin-top: 0.625rem;
         li {
             line-height: 0.688rem;
+            font-size: 0.5rem;
             a {
+                width: 50%;
+                text-align: left;
+                display:block;
+                white-space:nowrap; 
+                overflow:hidden; 
+                text-overflow:ellipsis;
                 float: left;
                 line-height: 0.75rem;
-                font-size: 0.625rem;
+                // font-size: 0.625rem;
                 color: blue;
             }
             span{
+                width: 40%;
+                text-align: right;
             	float: right;
             	line-height: 0.75rem;
                 font-size: 0.625rem;
