--- a/mobile/teacherLess/inform.less
+++ b/mobile/teacherLess/inform.less
@@ -1,12 +1,12 @@
-#ann {
+#inform {
     padding: 0.8rem;
     text-align: center;
     .ann_title {
-        width: 75%;
+        width: 50%;
         margin: 0.0rem auto;
         li {
             float: left;
-            width: 33%;
+            width: 50%;
             height: 0.8rem;
             line-height: 0.8rem;
             font-size: 0.5rem;
@@ -18,23 +18,10 @@
             }
         }
     }
-    .new_ann{
-        width: 40%;
-        background-color: #4872F6;
-        font-size: 0.5rem;
-        color: white;
-        border:none;
-        outline: none;
-        margin-top: 0.312rem;
-        height: 0.625rem;
-        line-height: 0.625rem;
-        border-radius: 0.094rem;
-    }
     .ann_content {
         height: 12.0rem;
         margin-top: 0.312rem;
         li {
-
             line-height: 0.688rem;
             a {
                 width: 60%;
@@ -50,8 +37,6 @@
             }
             span{
                 float: right;
-                width: 40%;
-                text-align: right;
                 line-height: 0.75rem;
                 font-size: 0.625rem;
             }
