--- a/mobile/studentLess/showHomework.less
+++ b/mobile/studentLess/showHomework.less
@@ -72,6 +72,7 @@
             border:none;
             border-radius: 0.312rem;
             outline: none;
+            font-size: 0.5rem;
         }
     }
 }
