--- a/mobile/teacherLess/homeView.less
+++ b/mobile/teacherLess/homeView.less
@@ -1,3 +1,7 @@
+body{
+	width: 100%;
+	text-align: center;
+}
 .state {
 	width: 4rem;
 	text-align: center;
@@ -17,7 +21,16 @@
 		}
     }
 }
+.newHomework{
+	width: 40%;
+	font-size: 0.5rem;
+	margin-bottom:0.312rem;
+	border-radius: 0.094rem;
+	background-color: #669FED;
+	border:none;
+}
 .table-content{
+	text-align: left;
 	li{
 		padding: 0.0rem 0.8rem;
 		h4{
