--- a/mobile/teacherLess/myinfo.less
+++ b/mobile/teacherLess/myinfo.less
@@ -29,8 +29,13 @@ body{
 		}
 		input{
 			border: none;
-			// width: 
 			font-size: 0.5rem;
+			&.tel{
+				border:1px solid black;
+			}
+			&.qq{
+				border:1px solid black;
+			}
 		}
 	}
 	button{
