--- a/mobile/studentLess/myinfo.less
+++ b/mobile/studentLess/myinfo.less
@@ -1,7 +1,7 @@
-body{
-	width: 100%;
-	padding: 0.8rem;
-	box-sizing: border-box;
+// body{
+// 	width: 100%;
+// 	padding: 0.8rem;
+// 	box-sizing: border-box;
 	.pre{
 		position: fixed;
 		top: 0.2rem;
@@ -44,4 +44,4 @@ body{
 		margin-top: 1rem;
 		margin-right: 1.0rem;
 	}
-}
+// }
