--- a/mobile/teacherLess/inform.less
+++ b/mobile/teacherLess/inform.less
@@ -24,7 +24,7 @@
         li {
             line-height: 0.688rem;
             a {
-                width: 60%;
+                width: 55%;
                 text-align: left;
                 display:block;
                 white-space:nowrap; 
@@ -39,6 +39,15 @@
                 float: right;
                 line-height: 0.75rem;
                 font-size: 0.438rem;
+                &.dealQuestion{
+                    display: inline-block;
+                    background-color: #72A1F3;
+                    padding: 0 0.062rem;
+                    border-radius: 0.094rem;
+                    height: 0.625rem;
+                    color: white;
+                    margin-right: 0.156rem;
+                }
             }
         }
     }
