--- a/mobile/studentLess/global.less
+++ b/mobile/studentLess/global.less
@@ -32,31 +32,62 @@ li {
     clear: both;
     content: '';
 }
+@font-face {
+  font-family: 'iconfont';
+  src: url('../font/iconfont.eot');
+  src: url('../font/iconfont.eot?#iefix') format('embedded-opentype'),
+  url('../font/iconfont.woff') format('woff'),
+  url('../font/iconfont.ttf') format('truetype'),
+  url('../font/iconfont.svg#iconfont') format('svg');
+}
+.iconfont{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 body {
-    // padding: 0.312rem;
+    padding: 0.312rem;
     position: relative;
+    background-color: #C9F5FC;
+    .gray{
+      width: 100%;
+      height: 1.125rem;
+      background-color: lightgray;
+      color: white;
+      text-align: center;
+      line-height: 1.125rem;
+      font-size: 0.5rem;
+    }
+    .content{
+      height: 14.875rem;
+      overflow: hidden;
+      background-color: white;
+    }
     footer {
         position: fixed;
         left: 0.0rem;
         bottom: 0;
         height: 1.375rem;
         width: 100%;
-        // border-top: 1px solid black;
+        border-top: 1px solid gray;
+        background-color: #C9F5FC;
         li{
             float: left;
             line-height: 1.375rem;
             width: 25%;
             box-sizing: border-box;
             // border: 0.031rem solid black;
-            border-right: 0.031rem solid black;
+            border-right: 0.031rem dotted gray;
             text-align: center;
-            background-color: lightblue;
+            // background-color: lightblue;
             a {
-                font-size: 0.875rem;
+                font-size: 0.625rem;
                 &.active {
-                    border-color: red;
-                    color: red;
+                    border-color: blue;
+                    color: blue;
                 }
             }
         }
