--- a/mobile/teacherLess/global.less
+++ b/mobile/teacherLess/global.less
@@ -34,8 +34,17 @@ li {
 }
 
 body {
-    // padding: 0.312rem;
+    padding: 0.312rem;
+    border:0.312rem solid #ff0;
+    box-sizing: border-box;
     position: relative;
+    .content{
+        height: 15.21rem;
+        box-sizing: border-box;
+        border:0.469rem solid lightblue;
+        background-color: white;
+        overflow: scroll;
+    }
     footer {
         position: fixed;
         left: 0.0rem;
