--- a/mobile/studentLess/global.less
+++ b/mobile/studentLess/global.less
@@ -49,9 +49,22 @@ li {
 }
 
 body {
-    padding: 0.312rem;
+    // padding: 0.312rem;
+    width: 100%;
     position: relative;
-    background-color: #C9F5FC;
+    background-color: lightblue;
+    box-sizing: border-box;
+    .content{
+        height: 15.21rem;
+        padding-top: 0.5rem;
+        box-sizing: border-box;
+        border:0.469rem solid lightblue;
+        border-top:none;
+        border-bottom: none;
+        background-color: white;
+        text-align: center;
+        overflow: scroll;
+    }
     .gray{
       width: 100%;
       height: 1.125rem;
@@ -61,11 +74,6 @@ body {
       line-height: 1.125rem;
       font-size: 0.5rem;
     }
-    .content{
-      height: 14.875rem;
-      overflow: hidden;
-      background-color: white;
-    }
     footer {
         position: fixed;
         left: 0.0rem;
@@ -73,7 +81,7 @@ body {
         height: 1.375rem;
         width: 100%;
         border-top: 1px solid gray;
-        background-color: #C9F5FC;
+        background-color: lightblue;
         li{
             float: left;
             line-height: 1.375rem;
