--- a/mobile/teacherLess/addHome.less
+++ b/mobile/teacherLess/addHome.less
@@ -1,9 +1,14 @@
 body {
 	padding: 0.625rem;
+    border:none;
     h1 {
         font-size: 0.75rem;
         text-align: center;
         margin-bottom: 0.312rem;
+    }
+    div{
+        font-size: 0.5rem;
+        margin-bottom: 0.156rem;
     }
     .addQuestion{
     	border:0.031rem solid black;
