--- a/mobile/teacherLess/homeView.less
+++ b/mobile/teacherLess/homeView.less
@@ -1,7 +1,3 @@
-body{
-	width: 100%;
-	text-align: center;
-}
 .state {
 	width: 4rem;
 	text-align: center;
@@ -29,22 +25,33 @@ body{
 	background-color: #669FED;
 	border:none;
 }
-.table-content{
-	text-align: left;
-	li{
-		padding: 0.0rem 0.8rem;
-		h4{
-			font-size: 0.562rem;
-			font-weight: bold;
-			span{
-				padding-right: 0.156rem;
-			}
-		}
-		ul{
-			li{
-				font-size: 0.5rem;
-			}
-		}
-	}
+.table-content {
+    li {
+        ul {
+            li {
+            // padding: 0.0rem 0.8rem;
+                h1 {
+                    font-size: 0.562rem;
+                    font-weight: bold;
+                }
+                ul {
+                    li {
+                        h4 {
+                            font-size: 0.562rem;
+                            // font-weight: bold;
+                            span {
+                                padding-right: 0.156rem;
+                            }
+                        }
+                        ul {
+                            li {
+                                font-size: 0.438rem;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
