--- a/mobile/teacherLess/index.less
+++ b/mobile/teacherLess/index.less
@@ -1,8 +1,8 @@
-body{
-	width: 100%;
-	height: 100%;
-	.content{
-		height:16rem;
-		overflow: auto;
-	}
-}
+// body{
+// 	width: 100%;
+// 	height: 100%;
+// 	.content{
+// 		height:16rem;
+// 		overflow: auto;
+// 	}
+// }
