--- a/mobile/studentLess/inform.less
+++ b/mobile/studentLess/inform.less
@@ -18,6 +18,17 @@
             }
         }
     }
+    .search{
+        margin: 0.312rem 0;
+        font-size: 0.5rem;
+        button{
+            border:none;
+            border-radius: 0.094rem;
+            background-color: skyblue;
+            width: 1.5rem;
+            line-height: 0.6rem;
+        }
+    }
     .new_iform{
         width: 40%;
         background-color: #4872F6;
