--- a/mobile/studentLess/tip.less
+++ b/mobile/studentLess/tip.less
@@ -18,6 +18,17 @@
 			}
         }
     }
+    .search{
+        margin: 0.312rem 0;
+        font-size: 0.5rem;
+        button{
+            border:none;
+            border-radius: 0.094rem;
+            background-color: skyblue;
+            width: 1.5rem;
+            line-height: 0.6rem;
+        }
+    }
     .ann_content {
         // text-align: center;
         // padding: 0.625rem 0.625rem 0.0rem;
